[gd_scene load_steps=26 format=2]

[ext_resource path="res://Pic/bc911.png" type="Texture" id=1]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Pic/island55.png" type="Texture" id=3]
[ext_resource path="res://Pic/island33.png" type="Texture" id=4]
[ext_resource path="res://Pic/island44.png" type="Texture" id=5]
[ext_resource path="res://Pic/island2.png" type="Texture" id=6]
[ext_resource path="res://Pic/island5.png" type="Texture" id=7]
[ext_resource path="res://Pic/island22.png" type="Texture" id=8]
[ext_resource path="res://Pic/island3.png" type="Texture" id=9]
[ext_resource path="res://Pic/island1.png" type="Texture" id=10]
[ext_resource path="res://Pic/island4.png" type="Texture" id=11]
[ext_resource path="res://script/1.4.0.gd" type="Script" id=12]
[ext_resource path="res://script/main_player.gd" type="Script" id=13]
[ext_resource path="res://Scene/main_school.gd" type="Script" id=14]
[ext_resource path="res://script/main_record.gd" type="Script" id=15]
[ext_resource path="res://script/main_news.gd" type="Script" id=16]
[ext_resource path="res://script/main_story.gd" type="Script" id=17]
[ext_resource path="res://Pic/island11.png" type="Texture" id=18]
[ext_resource path="res://Pic/pk.png" type="Texture" id=19]
[ext_resource path="res://script/pk.gd" type="Script" id=20]

[sub_resource type="StyleBoxLine" id=10]
color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 1
outline_color = Color( 0.286275, 0.690196, 0.501961, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=12]
size = 40
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="Control2" type="Control"]
margin_right = 1925.0
margin_bottom = 1079.0
script = ExtResource( 12 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="player" type="Button" parent="bg"]
anchor_left = 0.419792
anchor_top = 1.08796
anchor_right = 0.626563
anchor_bottom = 1.3287
margin_left = -603.0
margin_top = -596.0
margin_right = -373.0
margin_bottom = -276.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 7 )
flat = true
expand_icon = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="record" type="Button" parent="bg"]
margin_left = 1215.0
margin_top = 557.0
margin_right = 1744.0
margin_bottom = 1058.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_colors/font_color = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_colors/font_color_pressed = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 6 )
flat = true
icon_align = 1
script = ExtResource( 15 )

[node name="story" type="Button" parent="bg"]
margin_left = 70.0
margin_top = 28.0
margin_right = 570.0
margin_bottom = 529.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 9 )
flat = true
icon_align = 1
script = ExtResource( 17 )

[node name="news" type="Button" parent="bg"]
margin_left = 1374.0
margin_top = 29.0
margin_right = 1874.0
margin_bottom = 530.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 11 )
flat = true
icon_align = 1
script = ExtResource( 16 )

[node name="main_school" type="Button" parent="bg"]
margin_left = 751.0
margin_top = -39.0
margin_right = 1251.0
margin_bottom = 462.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
button_mask = 4
icon = ExtResource( 10 )
flat = true
icon_align = 1
script = ExtResource( 14 )

[node name="white_school" type="Button" parent="bg"]
visible = false
margin_left = 749.0
margin_top = -42.0
margin_right = 1261.0
margin_bottom = 464.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 8 )

[node name="white_record" type="Button" parent="bg"]
visible = false
margin_left = 1228.0
margin_top = 552.0
margin_right = 1740.0
margin_bottom = 1058.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 18 )

[node name="white_story" type="Button" parent="bg"]
visible = false
margin_left = 71.0
margin_top = 28.0
margin_right = 571.0
margin_bottom = 528.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 4 )

[node name="white_news" type="Button" parent="bg"]
visible = false
margin_left = 1374.0
margin_top = 34.0
margin_right = 1874.0
margin_bottom = 534.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 5 )

[node name="white_player" type="Button" parent="bg"]
visible = false
margin_left = 237.0
margin_top = 575.0
margin_right = 737.0
margin_bottom = 1075.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 3 )

[node name="pk" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -52.0
margin_right = 136.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 19 )
flat = true
icon_align = 1
expand_icon = true
script = ExtResource( 20 )

[node name="pk_hover" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -52.0
margin_right = 136.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 19 )
flat = true
icon_align = 1
expand_icon = true

[connection signal="pressed" from="bg/player" to="." method="_on_player_pressed"]
[connection signal="pressed" from="bg/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="bg/story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="bg/news" to="." method="_on_news_pressed"]
[connection signal="pressed" from="bg/main_school" to="." method="_on_school_pressed"]
[connection signal="pressed" from="bg/white_school" to="." method="_on_white_school_pressed"]
[connection signal="pressed" from="bg/white_record" to="." method="_on_white_record_pressed"]
[connection signal="pressed" from="bg/white_story" to="." method="_on_white_story_pressed"]
[connection signal="pressed" from="bg/white_news" to="." method="_on_white_news_pressed"]
[connection signal="pressed" from="bg/white_player" to="." method="_on_white_player_pressed"]
[connection signal="pressed" from="bg/pk" to="." method="_on_pk_pressed"]
[connection signal="pressed" from="bg/pk_hover" to="." method="_on_pk_hover_pressed"]
